[tool.poetry]
name = "repl-nix-demo-careers-website"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_demo_careers_website"}]

[tool.poetry.dependencies]
python = "^3.12"
flask-sqlalchemy = "^3.1.1"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
